Desktop plus Tablet versions deployed

--- a/index.html
+++ b/index.html
@@ -3,91 +3,113 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0">
+    <meta name="description" content="Get the real-time most up-to-date Figures, Info, Tips, Facts and all you need to know about COVID19 across Nigeria. Developed by Shamxeed.">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="https://img2.pngio.com/nigeria-flag-image-country-flags-nigeria-flag-png-250_250.png">
-    <meta name="description" content="Get the real-time most up-to-date Figures, Info, Tips, Facts and all you need to know about COVID19 across Nigeria. Developed by Shamxeed.">
     <title>Covid19 Update Nigeria</title>
 </head>
 <body>
     <header>
     </header>
     <div id="mainDiv">
-        <div id="welcomeDiv">
-            <h1>COVID-19 NIGERIA</h1>
-            <P id="date"></P>
-        </div>
-        <div class="subsequentDivs grey">
-                <h3 id="h1">Sample Tested</h3>
+        <!-------------- CASES --------------->
+        <div id="cases">
+            <div id="welcomeDiv">
+                <h1>COVID-19 NIGERIA</h1>
+                <P id="date"></P>
+            </div>
+            <div class="subsequentDivs grey">
+                <h3>Sample Tested</h3>
                 <p id="sample" class="figures"></p>
-        </div>
-        <div class="subsequentDivs blue">
-            <h3>Confirmed Cases</h3>
-            <p id="confirmedCases" class="figures"></p>
-        </div>
-        <div class="subsequentDivs yello">
-            <h3>Active Cases</h3>
-            <p id="activeCases" class="figures"></p>
-        </div>
-        <div class="subsequentDivs green">
-            <h3>Discharged Cases</h3>
-            <p id="discharged" class="figures"></p>
-        </div>
-        <div id="blink" class="subsequentDivs red">
-            <h3>Death</h3>
-            <p id="death" class="figures"></p>
-        </div>
-        <div id="tableMainDiv">
-            <h2>Confirmed Cases by State</h2>
-            <div id="tableDiv">
-                <table id="table">
-                    <tr>
-                        <th class="smallWidth">States</th>
-                        <th>No of Cases(Lab Confirmed)</th>
-                        <th>Cases (on admission)</th>
-                        <th>Discharged</th>
-                        <th class="smallWidth">Deaths</th>
-                    </tr>
-                </table>
+            </div>
+            <div class="subsequentDivs blue">
+                <h3>Confirmed Cases</h3>
+                <p id="confirmedCases" class="figures"></p>
+            </div>
+            <div class="subsequentDivs yello">
+                <h3>Active Cases</h3>
+                <p id="activeCases" class="figures"></p>
+            </div>
+            <div class="subsequentDivs green">
+                <h3>Discharged Cases</h3>
+                <p id="discharged" class="figures"></p>
+            </div>
+            <div id="blink" class="subsequentDivs red">
+                <h3>Death</h3>
+                <p id="death" class="figures"></p>
             </div>
         </div>
-        <div id="highlightMainDiv">
-            <div id="highlight">
-                <h2>Highlights</h2>
-                <ul>
-                    <li>On the 11th of July 2020, 664 new confirmed cases and 15 deaths were recorded in Nigeria</li>
-                    <li>No new state has reported a case in the last 24 hours.</li>
-                    <li>Till date, 31987 cases have been confirmed, 13103 cases have been discharged and 724 deaths have been recorded in 36 states and the Federal Capital Territory</li>
-                    <li>The 664 new cases are reported from 18 states- Lagos(224), FCT(105), Edo(85), Ondo(64), Kaduna(32), Imo(27), Osun(19), Plateau(17), Oyo(17), Ogun(17), Rivers(14), Delta(11), Adamawa(10), Enugu(7), Nassarawa (6), Gombe(3), Abia(3), Ekiti(3)</li>
-                </ul>
-            </div>
-        </div>
-        <div id="tweetsMainDiv">
-            <h2>Tweets by NCDC</h2>
-            <div id="tweets">
-                <div class="tweet">
-                    <blockquote class="twitter-tweet" data-theme="dark"><p lang="tl" dir="ltr">664 new cases of <a href="https://twitter.com/hashtag/COVID19Nigeria?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19Nigeria</a>;<br><br>Lagos-224<br>FCT-105<br>Edo-85<br>Ondo-64<br>Kaduna-32<br>Imo-27<br>Osun-19<br>Plateau-17<br>Oyo-17<br>Ogun-17<br>Rivers-14<br>Delta-11<br>Adamawa-10<br>Enugu-7<br>Nassarawa-6<br>Gombe-3<br>Abia-3<br>Ekiti-3<br><br>31,987 confirmed<br>13,103 discharged<br>724 deaths <a href="https://t.co/0270SaEJGU">pic.twitter.com/0270SaEJGU</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1282083928384385027?ref_src=twsrc%5Etfw">July 11, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                </div>
-                <div class="tweet">
-                    <blockquote class="twitter-tweet" data-conversation="none" data-theme="light"><p lang="en" dir="ltr">A breakdown of cases by state can be found via <a href="https://t.co/zQrpNeOfet">https://t.co/zQrpNeOfet</a><a href="https://twitter.com/hashtag/TakeResponsibility?src=hash&amp;ref_src=twsrc%5Etfw">#TakeResponsibility</a> <a href="https://t.co/glJafTfIvM">pic.twitter.com/glJafTfIvM</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1282087061617627143?ref_src=twsrc%5Etfw">July 11, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                </div>
-                <div class="tweet">
-                    <blockquote class="twitter-tweet" data-theme="dark"><p lang="tl" dir="ltr">575 new cases of <a href="https://twitter.com/hashtag/COVID19Nigeria?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19Nigeria</a>;<br><br>Lagos-224<br>Oyo-85<br>FCT-68<br>Rivers-49<br>Kaduna-39<br>Edo-31<br>Enugu-30<br>Delta-11<br>Niger-10<br>Katsina-9<br>Ebonyi-5<br>Gombe-3<br>Jigawa-3<br>Plateau-2<br>Nassarawa-2<br>Borno-2<br>Kano-1<br>Abia-1<br><br>31,323 confirmed<br>12,795 discharged<br>709 deaths <a href="https://t.co/Mav9p5BNJr">pic.twitter.com/Mav9p5BNJr</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1281720728837029891?ref_src=twsrc%5Etfw">July 10, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+        <!---------------TABLE DISPLYING STATES STATS------------------->
+        <div id="table_to_tweets">
+            <div id="tableMainDiv">
+                <h2>Confirmed Cases by State</h2>
+                <div id="tableDiv">
+                    <table id="table">
+                        <tr>
+                            <th class="smallWidth">States</th>
+                            <th>No of Cases (Lab Confirmed)</th>
+                            <th>Cases (on admission)</th>
+                            <th>Discharged</th>
+                            <th class="smallWidth">Deaths</th>
+                        </tr>
+                    </table>
                 </div>
             </div>
+
+            <!----------------HIGHLIGHTING EVERYDAY STATS----------------->
+            <div id="highlight_to_tweets">
+                <div id="highlightMainDiv">
+                    <div id="highlight">
+                        <h2>Highlights</h2>
+                        <ul>
+                            <li>On the 12th of July 2020, 571 new confirmed cases and 16 deaths were recorded in Nigeria</li>
+                            <li>No new state has reported a case in the last 24 hours.</li>
+                            <li>Till date, 32558 cases have been confirmed, 13447 cases have been discharged and 740 deaths have been recorded in 36 states and the Federal Capital Territory</li>
+                            <li>The 571 new cases are reported from 20 states- Lagos(152), Ebonyi(108), Edo(53), Ondo(46), FCT(38), Oyo(20), Kwara(19), Plateau(17), Osun(14), Bayelsa(14), Ekiti(14), Katsina(14), Akwa Ibom(11), Kaduna(11), Rivers(11), Niger(10), Ogun(7), Kano(6), Cross River(4), Bauchi(2)</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <!------------------EMBEDDING NCDC TWEETS----------------------->
+                <div id="tweetsMainDiv">
+                    <h2>Tweets by NCDC</h2>
+                    <div id="tweets">
+                        <div class="tweet">
+                            <blockquote class="twitter-tweet" data-theme="dark"><p lang="tl" dir="ltr">571 new cases of <a href="https://twitter.com/hashtag/COVID19Nigeria?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19Nigeria</a>;<br><br>Lagos-152<br>Ebonyi-108<br>Edo-53<br>Ondo-46<br>FCT-38<br>Oyo-20<br>Kwara-19<br>Plateau-17<br>Osun-14<br>Bayelsa-14<br>Ekiti-14<br>Katsina-14<br>Akwa Ibom-11<br>Kaduna-11<br>Rivers-11<br>Niger-10<br>Ogun-7<br>Kano-6<br>Cross River-4<br>Bauchi-2<br><br>32,558 confirmed<br>13,447 discharged<br>740 deaths <a href="https://t.co/h9SJid9veA">pic.twitter.com/h9SJid9veA</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1282439867708911622?ref_src=twsrc%5Etfw">July 12, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        </div>
+                        <div class="tweet">
+                            <blockquote class="twitter-tweet" data-theme="dark"><p lang="tl" dir="ltr">664 new cases of <a href="https://twitter.com/hashtag/COVID19Nigeria?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19Nigeria</a>;<br><br>Lagos-224<br>FCT-105<br>Edo-85<br>Ondo-64<br>Kaduna-32<br>Imo-27<br>Osun-19<br>Plateau-17<br>Oyo-17<br>Ogun-17<br>Rivers-14<br>Delta-11<br>Adamawa-10<br>Enugu-7<br>Nassarawa-6<br>Gombe-3<br>Abia-3<br>Ekiti-3<br><br>31,987 confirmed<br>13,103 discharged<br>724 deaths <a href="https://t.co/0270SaEJGU">pic.twitter.com/0270SaEJGU</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1282083928384385027?ref_src=twsrc%5Etfw">July 11, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        </div>
+                        <div class="tweet">
+                            <blockquote class="twitter-tweet" data-conversation="none" data-theme="dark"><p lang="en" dir="ltr">A breakdown of cases by state can be found via <a href="https://t.co/zQrpNeOfet">https://t.co/zQrpNeOfet</a><a href="https://twitter.com/hashtag/TakeResponsibility?src=hash&amp;ref_src=twsrc%5Etfw">#TakeResponsibility</a> <a href="https://t.co/glJafTfIvM">pic.twitter.com/glJafTfIvM</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1282087061617627143?ref_src=twsrc%5Etfw">July 11, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        </div>
+                        <div class="tweet">
+                            <blockquote class="twitter-tweet" data-theme="dark"><p lang="tl" dir="ltr">575 new cases of <a href="https://twitter.com/hashtag/COVID19Nigeria?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19Nigeria</a>;<br><br>Lagos-224<br>Oyo-85<br>FCT-68<br>Rivers-49<br>Kaduna-39<br>Edo-31<br>Enugu-30<br>Delta-11<br>Niger-10<br>Katsina-9<br>Ebonyi-5<br>Gombe-3<br>Jigawa-3<br>Plateau-2<br>Nassarawa-2<br>Borno-2<br>Kano-1<br>Abia-1<br><br>31,323 confirmed<br>12,795 discharged<br>709 deaths <a href="https://t.co/Mav9p5BNJr">pic.twitter.com/Mav9p5BNJr</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1281720728837029891?ref_src=twsrc%5Etfw">July 10, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
+
+        <!-----------------VIDEO TIPS AND FACTS--------------------->
         <div id="videoTipsMainDiv">
             <h2>Tips and Facts</h2>
-            <div class="videoTips">
-                <iframe height="315" src="https://www.youtube.com/embed/Kk9RvLDp_Vg?&autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen ></iframe>
-            </div>
-            <div class="videoTips">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/3mX4MzTE6wk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-            <div class="videoTips">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/Uh7YY-As4jw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div id="videoTipsDiv">
+                <div class="videoTips">
+                    <iframe height="315" src="https://www.youtube.com/embed/Kk9RvLDp_Vg?&autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen ></iframe>
+                </div>
+                <div class="videoTips">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/3mX4MzTE6wk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <div class="videoTips">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Uh7YY-As4jw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
             </div>
         </div>
     </div>
+
+    <!----------------FOOTER---------------------->
     <footer>
         <div id="bio">
             <p id="about">If you like what you see here chances are you may like to know more about the developer, you can always find me here on <a class="anchorTag" href="https://twitter.com/shamxeed05">Twitter</a>&#128521;</p>
