--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 13th of July 2020, 595 new confirmed cases and 4 deaths were recorded in Nigeria</li>
+                            <li>On the 14th of July 2020, 463 new confirmed cases and 10 deaths were recorded in Nigeria</li>
                             <li>No new state has reported a case in the last 24 hours.</li>
-                            <li>Till date, 33153 cases have been confirmed, 13671 cases have been discharged and 744 deaths have been recorded in 36 states and the Federal Capital Territory</li>
-                            <li>The 595 new cases are reported from 20 states- Lagos (156), Oyo (141), FCT (99), Edo (47), Kaduna (27), Ondo (22), Rivers (20), Osun (17), Imo (13), Plateau (10), Nasarawa (8), Anambra (8), Kano (5), Benue (5), Borno (5), Ogun (4), Taraba (3), Gombe (3), Kebbi (1), Cross River (1)</li>
+                            <li>Till date, 33616 cases have been confirmed, 13792 cases have been discharged and 754 deaths have been recorded in 36 states and the Federal Capital Territory</li>
+                            <li>The 463 new cases are reported from 17 states- Lagos (128), Kwara (92), Enugu (39), Delta (33), Edo (29), Plateau (28), Kaduna (23), Oyo (15), Ogun (14), Osun (14), FCT (12), Ondo (9), Rivers (9), Abia (8), Bayelsa (5), Ekiti (3), Borno (2)</li>
                         </ul>
                     </div>
                 </div>
@@ -75,6 +75,15 @@
                 <div id="tweetsMainDiv">
                     <h2>Tweets by NCDC</h2>
                     <div id="tweets">
+                        <div class="tweet">
+                            <blockquote class="twitter-tweet" data-theme="dark"><p lang="tl" dir="ltr">463 new cases of <a href="https://twitter.com/hashtag/COVID19Nigeria?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19Nigeria</a>;<br><br>Lagos-128<br>Kwara-92<br>Enugu-39<br>Delta-33<br>Edo-29<br>Plateau-28<br>Kaduna-23<br>Oyo-15<br>Ogun-14<br>Osun-14<br>FCT-12<br>Ondo-9<br>Rivers-9<br>Abia-8<br>Bayelsa-5<br>Ekiti-3<br>Borno-2<br><br>33,616 confirmed<br>13,792 discharged<br>754 deaths <a href="https://t.co/0F4zsoNjCt">pic.twitter.com/0F4zsoNjCt</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1283168886779793408?ref_src=twsrc%5Etfw">July 14, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        </div>
+                        <div class="tweet">
+                            <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">Yesterday at the annual Global Health Security Module of the National Institute of Security Studies, DG <a href="https://twitter.com/Chikwe_I?ref_src=twsrc%5Etfw">@Chikwe_I</a> joined the discussion on strengthening national security &amp; the <a href="https://twitter.com/hashtag/COVID19?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19</a> response<br><br>We commend the efforts of NISS in putting Health security on the agenda for dialogue <a href="https://t.co/vAGqZP5LxR">pic.twitter.com/vAGqZP5LxR</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1283158973944913920?ref_src=twsrc%5Etfw">July 14, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        </div>
+                        <div class="tweet">
+                            <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">“The health workers are a blessing to Nigeria; they are the true warriors, the true heroes. They are putting their health on the line for us every day, sacrificing as well. Because when they are at risk, their families are at risk.” <a href="https://twitter.com/hashtag/MyCOVID19NaijaStory?src=hash&amp;ref_src=twsrc%5Etfw">#MyCOVID19NaijaStory</a> <a href="https://t.co/q2tX0Pl6MY">https://t.co/q2tX0Pl6MY</a></p>&mdash; Nigeria Health Watch (@nighealthwatch) <a href="https://twitter.com/nighealthwatch/status/1283084358128148485?ref_src=twsrc%5Etfw">July 14, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        </div>
                         <div class="tweet">
                             <blockquote class="twitter-tweet" data-theme="dark"><p lang="tl" dir="ltr">595 new cases of <a href="https://twitter.com/hashtag/COVID19Nigeria?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19Nigeria</a>;<br><br>Lagos-156<br>Oyo-141<br>FCT-99<br>Edo-47<br>Kaduna-27<br>Ondo-22<br>Rivers-20<br>Osun-17<br>Imo-13<br>Plateau-10<br>Nasarawa-8<br>Anambra-8<br>Kano-5<br>Benue-5<br>Borno-5<br>Ogun-4<br>Taraba-3<br>Gombe-3<br>Kebbi-1<br>Cross Rivers-1<br><br>33,153 confirmed<br>13,671 discharged<br>744 deaths <a href="https://t.co/juncgT4pL9">pic.twitter.com/juncgT4pL9</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1282806791550709760?ref_src=twsrc%5Etfw">July 13, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                         </div>
