--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
                     <h2>Tweets by NCDC</h2>
                     <div id="tweets">
                         <div class="tweet">
+                            <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">📢<a href="https://twitter.com/hashtag/COVID19?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19</a> UPDATE!!! <a href="https://twitter.com/NigEducation?ref_src=twsrc%5Etfw">@NigEducation</a> has published Guidelines for Schools and Learning Facilities Reopening after COVID-19 Pandemic Closures<br><br>This outlines measures for enacting safe, efficient &amp; equitable plans for school re-opening &amp; operations<br><br>Read: <a href="https://t.co/m0Ezq8Ztvg">https://t.co/m0Ezq8Ztvg</a> <a href="https://t.co/ubx8Wsmmr5">pic.twitter.com/ubx8Wsmmr5</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1283400764858208258?ref_src=twsrc%5Etfw">July 15, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        </div>
+                        <div class="tweet">
                             <blockquote class="twitter-tweet" data-theme="dark"><p lang="tl" dir="ltr">463 new cases of <a href="https://twitter.com/hashtag/COVID19Nigeria?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19Nigeria</a>;<br><br>Lagos-128<br>Kwara-92<br>Enugu-39<br>Delta-33<br>Edo-29<br>Plateau-28<br>Kaduna-23<br>Oyo-15<br>Ogun-14<br>Osun-14<br>FCT-12<br>Ondo-9<br>Rivers-9<br>Abia-8<br>Bayelsa-5<br>Ekiti-3<br>Borno-2<br><br>33,616 confirmed<br>13,792 discharged<br>754 deaths <a href="https://t.co/0F4zsoNjCt">pic.twitter.com/0F4zsoNjCt</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1283168886779793408?ref_src=twsrc%5Etfw">July 14, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                         </div>
                         <div class="tweet">
