--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 14th of July 2020, 463 new confirmed cases and 10 deaths were recorded in Nigeria</li>
+                            <li>On the 15th of July 2020, 643 new confirmed cases and 6 deaths were recorded in Nigeria</li>
                             <li>No new state has reported a case in the last 24 hours.</li>
-                            <li>Till date, 33616 cases have been confirmed, 13792 cases have been discharged and 754 deaths have been recorded in 36 states and the Federal Capital Territory</li>
-                            <li>The 463 new cases are reported from 17 states- Lagos (128), Kwara (92), Enugu (39), Delta (33), Edo (29), Plateau (28), Kaduna (23), Oyo (15), Ogun (14), Osun (14), FCT (12), Ondo (9), Rivers (9), Abia (8), Bayelsa (5), Ekiti (3), Borno (2)</li>
+                            <li>Till date, 34259 cases have been confirmed, 13999 cases have been discharged and 760 deaths have been recorded in 36 states and the Federal Capital Territory</li>
+                            <li>The 643 new cases are reported from 19 states- Lagos (230), Oyo (69), FCT (51), Edo (43), Osun (35), Rivers (30), Ebonyi (30), Kaduna (28), Ogun (27), Ondo (23), Plateau (20), Benue (17), Enugu (16), Imo (10), Delta (6), Kano (4), Nasarawa (2), Kebbi (1), Ekiti (1)</li>
                         </ul>
                     </div>
                 </div>
@@ -75,6 +75,12 @@
                 <div id="tweetsMainDiv">
                     <h2>Tweets by NCDC</h2>
                     <div id="tweets">
+                        <div class="tweet">
+                            <blockquote class="twitter-tweet" data-theme="dark"><p lang="tl" dir="ltr">643 new cases of <a href="https://twitter.com/hashtag/COVID19Nigeria?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19Nigeria</a>;<br><br>Lagos-230<br>Oyo-69<br>FCT-51<br>Edo-43<br>Osun-35<br>Rivers-30<br>Ebonyi-30<br>Kaduna-28<br>Ogun-27<br>Ondo-23<br>Plateau-20<br>Benue-17<br>Enugu-16<br>Imo-10<br>Delta-6<br>Kano-4<br>Nasarawa-2<br>Kebbi-1<br>Ekiti-1<br><br>34,259 confirmed<br>13,999 discharged<br>760 deaths <a href="https://t.co/pcSg04O0qM">pic.twitter.com/pcSg04O0qM</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1283644599618220032?ref_src=twsrc%5Etfw">July 16, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        </div>
+                        <div class="tweet">
+                            <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">The fight against <a href="https://twitter.com/hashtag/COVID19?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19</a> requires a collective effort.<br><br>Protect others as they <a href="https://twitter.com/hashtag/TakeResponsibility?src=hash&amp;ref_src=twsrc%5Etfw">#TakeResponsibility</a> to protect you<br><br>✅Wear a face mask 😷<br>✅Observe physical distancing🧍‍♀️ 🧍<br>✅Wash your hands frequently with soap and water 🧼 💦 <a href="https://t.co/INyoTecThZ">pic.twitter.com/INyoTecThZ</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1283696799321137152?ref_src=twsrc%5Etfw">July 16, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        </div>
                         <div class="tweet">
                             <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">📢<a href="https://twitter.com/hashtag/COVID19?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19</a> UPDATE!!! <a href="https://twitter.com/NigEducation?ref_src=twsrc%5Etfw">@NigEducation</a> has published Guidelines for Schools and Learning Facilities Reopening after COVID-19 Pandemic Closures<br><br>This outlines measures for enacting safe, efficient &amp; equitable plans for school re-opening &amp; operations<br><br>Read: <a href="https://t.co/m0Ezq8Ztvg">https://t.co/m0Ezq8Ztvg</a> <a href="https://t.co/ubx8Wsmmr5">pic.twitter.com/ubx8Wsmmr5</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1283400764858208258?ref_src=twsrc%5Etfw">July 15, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                         </div>
