--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 15th of July 2020, 643 new confirmed cases and 6 deaths were recorded in Nigeria</li>
+                            <li>On the 16th of July 2020, 595 new confirmed cases and 9 deaths were recorded in Nigeria</li>
                             <li>No new state has reported a case in the last 24 hours.</li>
-                            <li>Till date, 34259 cases have been confirmed, 13999 cases have been discharged and 760 deaths have been recorded in 36 states and the Federal Capital Territory</li>
-                            <li>The 643 new cases are reported from 19 states- Lagos (230), Oyo (69), FCT (51), Edo (43), Osun (35), Rivers (30), Ebonyi (30), Kaduna (28), Ogun (27), Ondo (23), Plateau (20), Benue (17), Enugu (16), Imo (10), Delta (6), Kano (4), Nasarawa (2), Kebbi (1), Ekiti (1)</li>
+                            <li>Till date, 34854 cases have been confirmed, 14292 cases have been discharged and 769 deaths have been recorded in 36 states and the Federal Capital Territory</li>
+                            <li>The 595 new cases are reported from 24 states- Lagos (156), Ondo (95), Rivers (53), Abia (43), Oyo (38), Enugu (29), Edo (24), FCT(23), Kaduna (20), Akwa Ibom (17), Anambra (17), Osun (17), Ogun (14), Kano (13), Imo (11), Delta (6), Ekiti (5), Gombe (4), Plateau (4), Cross River (2), Adamawa (1), Bauchi (1), Jigawa (1), Yobe (1)</li>
                         </ul>
                     </div>
                 </div>
@@ -75,6 +75,12 @@
                 <div id="tweetsMainDiv">
                     <h2>Tweets by NCDC</h2>
                     <div id="tweets">
+                        <div class="tweet">
+                            <blockquote class="twitter-tweet" data-theme="dark"><p lang="tl" dir="ltr">595 new cases of <a href="https://twitter.com/hashtag/COVID19Nigeria?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19Nigeria</a>;<br><br>Lagos-156<br>Ondo-95<br>Rivers-53<br>Abia-43<br>Oyo-38<br>Enugu-29<br>Edo-24<br>FCT-23<br>Kaduna-20<br>Akwa Ibom-17<br>Anambra-17<br>Osun-17<br>Ogun-14<br>Kano-13<br>Imo-11<br>Delta-6<br>Ekiti-5<br>Gombe-4<br>Plateau-4<br>Cross River-2<br>Adamawa-1<br>Bauchi-1<br>Jigawa-1<br>Yobe-1 <a href="https://t.co/XQfsmVTlAZ">pic.twitter.com/XQfsmVTlAZ</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1283897595706908673?ref_src=twsrc%5Etfw">July 16, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        </div>
+                        <div class="tweet">
+                            <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">How can you reduce risk of <a href="https://twitter.com/hashtag/COVID19?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19</a> spread in the workplace❓<a href="https://twitter.com/hashtag/TakeResponsibility?src=hash&amp;ref_src=twsrc%5Etfw">#TakeResponsibility</a> by:<br>✅ Conducting temperature checks<br>✅ Ensuring use of face masks <br>✅ Observe physical distancing<br>✅ Observe hand hygiene frequently<br><br>Download our business guide for more 📋<a href="https://t.co/gfnQehqQoW">https://t.co/gfnQehqQoW</a> <a href="https://t.co/QueJHONjJf">pic.twitter.com/QueJHONjJf</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1284081928174436354?ref_src=twsrc%5Etfw">July 17, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        </div>
                         <div class="tweet">
                             <blockquote class="twitter-tweet" data-theme="dark"><p lang="tl" dir="ltr">643 new cases of <a href="https://twitter.com/hashtag/COVID19Nigeria?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19Nigeria</a>;<br><br>Lagos-230<br>Oyo-69<br>FCT-51<br>Edo-43<br>Osun-35<br>Rivers-30<br>Ebonyi-30<br>Kaduna-28<br>Ogun-27<br>Ondo-23<br>Plateau-20<br>Benue-17<br>Enugu-16<br>Imo-10<br>Delta-6<br>Kano-4<br>Nasarawa-2<br>Kebbi-1<br>Ekiti-1<br><br>34,259 confirmed<br>13,999 discharged<br>760 deaths <a href="https://t.co/pcSg04O0qM">pic.twitter.com/pcSg04O0qM</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1283644599618220032?ref_src=twsrc%5Etfw">July 16, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                         </div>
