--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 16th of July 2020, 595 new confirmed cases and 9 deaths were recorded in Nigeria</li>
+                            <li>On the 17th of July 2020, 600 new confirmed cases and 3 deaths were recorded in Nigeria</li>
                             <li>No new state has reported a case in the last 24 hours.</li>
-                            <li>Till date, 34854 cases have been confirmed, 14292 cases have been discharged and 769 deaths have been recorded in 36 states and the Federal Capital Territory</li>
-                            <li>The 595 new cases are reported from 24 states- Lagos (156), Ondo (95), Rivers (53), Abia (43), Oyo (38), Enugu (29), Edo (24), FCT(23), Kaduna (20), Akwa Ibom (17), Anambra (17), Osun (17), Ogun (14), Kano (13), Imo (11), Delta (6), Ekiti (5), Gombe (4), Plateau (4), Cross River (2), Adamawa (1), Bauchi (1), Jigawa (1), Yobe (1)</li>
+                            <li>Till date, 35454 cases have been confirmed, 14633 cases have been discharged and 772 deaths have been recorded in 36 states and the Federal Capital Territory</li>
+                            <li>The 600 new cases are reported from 20 states- Lagos(129), FCT(118), Oyo(87), Kano(55), Benue(42), Enugu(35), Kwara(28), Imo(16), Ogun(13), Kaduna(12), Ondo(12), Delta(11), Edo(11), Plateau(8), Nasarawa(6), Ekiti(6), Niger(6), Borno(4), Abia(4), Gombe(3)</li>
                         </ul>
                     </div>
                 </div>
@@ -75,6 +75,12 @@
                 <div id="tweetsMainDiv">
                     <h2>Tweets by NCDC</h2>
                     <div id="tweets">
+                        <div class="tweet">
+                            <blockquote class="twitter-tweet" data-theme="dark"><p lang="tl" dir="ltr">600 new cases of <a href="https://twitter.com/hashtag/COVID19Nigeria?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19Nigeria</a>;<br><br>Lagos-129<br>FCT-118<br>Oyo-87<br>Kano-55<br>Benue-42<br>Enugu-35<br>Kwara-28<br>Imo-16<br>Ogun-13<br>Kaduna-12<br>Ondo-12<br>Delta-11<br>Edo-11<br>Plateau-8<br>Nasarawa-6<br>Ekiti-6<br>Niger-6<br>Borno-4<br>Abia-4<br>Gombe-3<br><br>35,454 confirmed<br>14,633 discharged<br>772 deaths <a href="https://t.co/OsPmCXJVU2">pic.twitter.com/OsPmCXJVU2</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1284258617290625024?ref_src=twsrc%5Etfw">July 17, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        </div>
+                        <div class="tweet">
+                            <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr"><a href="https://twitter.com/hashtag/COVID19?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19</a> is primarily spread via respiratory droplets from infected people <br><br>A face shield alone cannot protect you. Remember to always wear a face mask when in public places &amp; maintain a physical distance of 2 meters<br><br>Read:<a href="https://t.co/4S1u2FOIhH">https://t.co/4S1u2FOIhH</a><a href="https://twitter.com/hashtag/TakeResponsibility?src=hash&amp;ref_src=twsrc%5Etfw">#TakeResponsibility</a> <a href="https://t.co/Iorsq412X8">pic.twitter.com/Iorsq412X8</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1284201104822149122?ref_src=twsrc%5Etfw">July 17, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        </div>
                         <div class="tweet">
                             <blockquote class="twitter-tweet" data-theme="dark"><p lang="tl" dir="ltr">595 new cases of <a href="https://twitter.com/hashtag/COVID19Nigeria?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19Nigeria</a>;<br><br>Lagos-156<br>Ondo-95<br>Rivers-53<br>Abia-43<br>Oyo-38<br>Enugu-29<br>Edo-24<br>FCT-23<br>Kaduna-20<br>Akwa Ibom-17<br>Anambra-17<br>Osun-17<br>Ogun-14<br>Kano-13<br>Imo-11<br>Delta-6<br>Ekiti-5<br>Gombe-4<br>Plateau-4<br>Cross River-2<br>Adamawa-1<br>Bauchi-1<br>Jigawa-1<br>Yobe-1 <a href="https://t.co/XQfsmVTlAZ">pic.twitter.com/XQfsmVTlAZ</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1283897595706908673?ref_src=twsrc%5Etfw">July 16, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                         </div>
