--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 17th of July 2020, 600 new confirmed cases and 3 deaths were recorded in Nigeria</li>
+                            <li>On the 18th of July 2020, 653 new confirmed cases and 6 deaths were recorded in Nigeria</li>
                             <li>No new state has reported a case in the last 24 hours.</li>
-                            <li>Till date, 35454 cases have been confirmed, 14633 cases have been discharged and 772 deaths have been recorded in 36 states and the Federal Capital Territory</li>
-                            <li>The 600 new cases are reported from 20 states- Lagos(129), FCT(118), Oyo(87), Kano(55), Benue(42), Enugu(35), Kwara(28), Imo(16), Ogun(13), Kaduna(12), Ondo(12), Delta(11), Edo(11), Plateau(8), Nasarawa(6), Ekiti(6), Niger(6), Borno(4), Abia(4), Gombe(3)</li>
+                            <li>Till date, 36107 cases have been confirmed, 14938 cases have been discharged and 778 deaths have been recorded in 36 states and the Federal Capital Territory</li>
+                            <li>The 653 new cases are reported from 28 states- Lagos(115), Kwara(85), Enugu(80), FCT(78), Rivers(36), Ondo(35), Oyo(30), Katsina(28), Kaduna(19), Abia(19), Nasarawa(18), Plateau(17), Imo(16), Ogun(9), Ebonyi(9), Benue(9), Kano(9), Delta(8), Bauchi(7), Ekiti(6), Gombe(4), Bayelsa(4), Adamawa(4), Osun(4), Cross River(1), Yobe(1), Borno(1), Zamfara(1)</li>
                         </ul>
                     </div>
                 </div>
@@ -75,6 +75,15 @@
                 <div id="tweetsMainDiv">
                     <h2>Tweets by NCDC</h2>
                     <div id="tweets">
+                        <div class="tweet">
+                            <blockquote class="twitter-tweet" data-theme="dark"><p lang="tl" dir="ltr">653new cases of <a href="https://twitter.com/hashtag/COVID19Nigeria?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19Nigeria</a><br>Lagos-115<br>Kwara-85<br>Enugu-80<br>FCT-78<br>Rivers-36<br>Ondo-35<br>Oyo-30<br>Katsina-28<br>Kaduna-19<br>Abia-19<br>Nasarawa-18<br>Plateau-17<br>Imo-16<br>Ogun-9<br>Ebonyi-9<br>Benue-9<br>Kano-9<br>Delta-8<br>Bauchi-7<br>Ekiti-6<br>Gombe-4<br>Bayelsa-4<br>Adamawa-4<br>Osun-4<br>Cross River-1<br>Yobe-1<br>Borno-1<br>Zamfara-1 <a href="https://t.co/HD7XgD1s3I">pic.twitter.com/HD7XgD1s3I</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1284614834806501377?ref_src=twsrc%5Etfw">July 18, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        </div>
+                        <div class="tweet">
+                            <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">Scale-up of testing is key in assessing the <a href="https://twitter.com/hashtag/COVID19Nigeria?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19Nigeria</a> situation and coordinating response across the country<br><br>This week the <a href="https://twitter.com/hashtag/NCDCTeam?src=hash&amp;ref_src=twsrc%5Etfw">#NCDCTeam</a> is supporting <a href="https://twitter.com/KNSMOH?ref_src=twsrc%5Etfw">@KNSMOH</a> to strengthen <a href="https://twitter.com/hashtag/COVID19?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19</a> community sample collection in the state<br><br>Community case definition <a href="https://t.co/5gBllubXfc">https://t.co/5gBllubXfc</a> <a href="https://t.co/QC48kvnFnU">pic.twitter.com/QC48kvnFnU</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1284599329907527684?ref_src=twsrc%5Etfw">July 18, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        </div>
+                        <div class="tweet">
+                            <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">Observing physical distance helps:<br><br>☑Reduce the spread of <a href="https://twitter.com/hashtag/COVID19?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19</a> to others if you are already infected<br>☑Avoid contact with droplets when an infected person sneezes/coughs<a href="https://twitter.com/hashtag/TakeResponsibility?src=hash&amp;ref_src=twsrc%5Etfw">#TakeResponsibility</a><br>✔Wear a face mask<br>✔Observe physical distancing<br>✔Wash your hands frequently <a href="https://t.co/1kw37SC7Ca">pic.twitter.com/1kw37SC7Ca</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1284542117889679360?ref_src=twsrc%5Etfw">July 18, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        </div>
                         <div class="tweet">
                             <blockquote class="twitter-tweet" data-theme="dark"><p lang="tl" dir="ltr">600 new cases of <a href="https://twitter.com/hashtag/COVID19Nigeria?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19Nigeria</a>;<br><br>Lagos-129<br>FCT-118<br>Oyo-87<br>Kano-55<br>Benue-42<br>Enugu-35<br>Kwara-28<br>Imo-16<br>Ogun-13<br>Kaduna-12<br>Ondo-12<br>Delta-11<br>Edo-11<br>Plateau-8<br>Nasarawa-6<br>Ekiti-6<br>Niger-6<br>Borno-4<br>Abia-4<br>Gombe-3<br><br>35,454 confirmed<br>14,633 discharged<br>772 deaths <a href="https://t.co/OsPmCXJVU2">pic.twitter.com/OsPmCXJVU2</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1284258617290625024?ref_src=twsrc%5Etfw">July 17, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                         </div>
