--- a/index.html
+++ b/index.html
@@ -63,10 +63,9 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 18th of July 2020, 653 new confirmed cases and 6 deaths were recorded in Nigeria</li>
-                            <li>No new state has reported a case in the last 24 hours.</li>
-                            <li>Till date, 36107 cases have been confirmed, 14938 cases have been discharged and 778 deaths have been recorded in 36 states and the Federal Capital Territory</li>
-                            <li>The 653 new cases are reported from 28 states- Lagos(115), Kwara(85), Enugu(80), FCT(78), Rivers(36), Ondo(35), Oyo(30), Katsina(28), Kaduna(19), Abia(19), Nasarawa(18), Plateau(17), Imo(16), Ogun(9), Ebonyi(9), Benue(9), Kano(9), Delta(8), Bauchi(7), Ekiti(6), Gombe(4), Bayelsa(4), Adamawa(4), Osun(4), Cross River(1), Yobe(1), Borno(1), Zamfara(1)</li>
+                            <li>On the 19th of July 2020, 556 new confirmed cases and 11 deaths were recorded in Nigeria</li>
+                            <li>Till date, 36663 cases have been confirmed, 15105 cases have been discharged and 789 deaths have been recorded in 36 states and the Federal Capital Territory</li>
+                            <li>The 556 new cases are reported from 18 states- Edo(104), Lagos(97), FCT(70), Benue(66), Oyo(61), Kaduna(38), Plateau(28), Osun(19), Akwa Ibom(14), Rivers(13), Katsina(13), Ondo(13), Ogun(6), Kano(5), Nasarawa(4), Gombe(2), Ekiti(2), Borno(1)</li>
                         </ul>
                     </div>
                 </div>
@@ -75,6 +74,12 @@
                 <div id="tweetsMainDiv">
                     <h2>Tweets by NCDC</h2>
                     <div id="tweets">
+                        <div class="tweet">
+                            <blockquote class="twitter-tweet" data-theme="dark"><p lang="tl" dir="ltr">556 new cases of <a href="https://twitter.com/hashtag/COVID19Nigeria?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19Nigeria</a>;<br><br>Edo-104<br>Lagos-97<br>FCT-70<br>Benue-66<br>Oyo-61<br>Kaduna-38<br>Plateau-28<br>Osun-19<br>Akwa Ibom-14<br>Rivers-13<br>Katsina-13<br>Ondo-13<br>Ogun-6<br>Kano-5<br>Nasarawa-4<br>Gombe-2<br>Ekiti-2<br>Borno-1<br><br>36,663 confirmed<br>15,105 discharged<br>789 deaths <a href="https://t.co/ZVso5XHyGG">pic.twitter.com/ZVso5XHyGG</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1284979016349491201?ref_src=twsrc%5Etfw">July 19, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        </div>
+                        <div class="tweet">
+                            <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">At your place of worship make sure to adhere strictly to guidelines including<br><br>Hand hygiene<br>Physical distancing<br>Avoiding the sharing of personal items<br><br>Remember, it&#39;s better to worship at home to protect yourself &amp; loved ones from <a href="https://twitter.com/hashtag/COVID19?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19</a><br><br>Read full guide<a href="https://t.co/Q1UjwtyGdc">https://t.co/Q1UjwtyGdc</a> <a href="https://t.co/ym4WAltxO1">pic.twitter.com/ym4WAltxO1</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1284776809347911682?ref_src=twsrc%5Etfw">July 19, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        </div>
                         <div class="tweet">
                             <blockquote class="twitter-tweet" data-theme="dark"><p lang="tl" dir="ltr">653new cases of <a href="https://twitter.com/hashtag/COVID19Nigeria?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19Nigeria</a><br>Lagos-115<br>Kwara-85<br>Enugu-80<br>FCT-78<br>Rivers-36<br>Ondo-35<br>Oyo-30<br>Katsina-28<br>Kaduna-19<br>Abia-19<br>Nasarawa-18<br>Plateau-17<br>Imo-16<br>Ogun-9<br>Ebonyi-9<br>Benue-9<br>Kano-9<br>Delta-8<br>Bauchi-7<br>Ekiti-6<br>Gombe-4<br>Bayelsa-4<br>Adamawa-4<br>Osun-4<br>Cross River-1<br>Yobe-1<br>Borno-1<br>Zamfara-1 <a href="https://t.co/HD7XgD1s3I">pic.twitter.com/HD7XgD1s3I</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1284614834806501377?ref_src=twsrc%5Etfw">July 18, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                         </div>
