--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 19th of July 2020, 556 new confirmed cases and 11 deaths were recorded in Nigeria</li>
-                            <li>Till date, 36663 cases have been confirmed, 15105 cases have been discharged and 789 deaths have been recorded in 36 states and the Federal Capital Territory</li>
-                            <li>The 556 new cases are reported from 18 states- Edo(104), Lagos(97), FCT(70), Benue(66), Oyo(61), Kaduna(38), Plateau(28), Osun(19), Akwa Ibom(14), Rivers(13), Katsina(13), Ondo(13), Ogun(6), Kano(5), Nasarawa(4), Gombe(2), Ekiti(2), Borno(1)</li>
+                            <li>On the 20th of July 2020, 562 new confirmed cases and 12 deaths were recorded in Nigeria</li>
+                            <li>Till date, 37225 cases have been confirmed, 15333 cases have been discharged and 801 deaths have been recorded in 36 states and the Federal Capital Territory</li>
+                            <li>The 562 new cases are reported from 21 states- FCT (102), Lagos (100), Plateau (52), Kwara (50), Abia (47), Kaduna(35), Benue (34), Oyo (26), Ebonyi (24), Kano (16), Niger (15), Anambra (14), Gombe (12), Edo (11), Rivers (6), Nasarawa (5), Delta (5), Borno (3), Enugu (2), Bauchi (2), Kebbi (1)</li>
                         </ul>
                     </div>
                 </div>
@@ -74,6 +74,12 @@
                 <div id="tweetsMainDiv">
                     <h2>Tweets by NCDC</h2>
                     <div id="tweets">
+                        <div class="tweet">
+                            <blockquote class="twitter-tweet" data-theme="dark"><p lang="tl" dir="ltr">562 new cases of <a href="https://twitter.com/hashtag/COVID19Nigeria?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19Nigeria</a>;<br><br>FCT-102<br>Lagos-100<br>Plateau-52<br>Kwara-50<br>Abia-47<br>Kaduna-35<br>Benue-34<br>Oyo-26<br>Ebonyi-24<br>Kano-16<br>Niger-15<br>Anambra-14<br>Gombe-12<br>Edo-11<br>Rivers-6<br>Nasarawa-5<br>Delta-5<br>Borno-3<br>Enugu- 2<br>Bauchi-2<br>Kebbi- 1<br><br>37,225 confirmed<br>15,333 discharged<br>801 deaths <a href="https://t.co/YOnyl1KNUP">pic.twitter.com/YOnyl1KNUP</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1285342585591136268?ref_src=twsrc%5Etfw">July 20, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        </div>
+                        <div class="tweet">
+                            <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">Positive news from <a href="https://twitter.com/UniofOxford?ref_src=twsrc%5Etfw">@UniofOxford</a> on progress made in the development of a safe and effective <a href="https://twitter.com/hashtag/COVID19?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19</a> vaccine<br><br>Phase I/II trials of the <a href="https://twitter.com/hashtag/COVID19?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19</a> vaccine candidate shows promise however, phase III trials are needed to validate its efficacy against the virus <a href="https://t.co/qg7EcpvxEs">https://t.co/qg7EcpvxEs</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1285309171987034122?ref_src=twsrc%5Etfw">July 20, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        </div>
                         <div class="tweet">
                             <blockquote class="twitter-tweet" data-theme="dark"><p lang="tl" dir="ltr">556 new cases of <a href="https://twitter.com/hashtag/COVID19Nigeria?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19Nigeria</a>;<br><br>Edo-104<br>Lagos-97<br>FCT-70<br>Benue-66<br>Oyo-61<br>Kaduna-38<br>Plateau-28<br>Osun-19<br>Akwa Ibom-14<br>Rivers-13<br>Katsina-13<br>Ondo-13<br>Ogun-6<br>Kano-5<br>Nasarawa-4<br>Gombe-2<br>Ekiti-2<br>Borno-1<br><br>36,663 confirmed<br>15,105 discharged<br>789 deaths <a href="https://t.co/ZVso5XHyGG">pic.twitter.com/ZVso5XHyGG</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1284979016349491201?ref_src=twsrc%5Etfw">July 19, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                         </div>
